<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
              schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dwa_planner</name>
  <version>0.1.0</version>
  <description>
    A custom Dynamic Window Approach (DWA) local planner for TurtleBot3 on ROS 2 Humble.
    Samples velocity commands, predicts and scores trajectories, and publishes cmd_vel
    while avoiding obstacles. Includes reactive front‐obstacle override and RViz visualization.
  </description>
  <maintainer email="tushar@example.com">Tushar</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf_transformations</depend>

  <!-- Build/test dependencies (optional) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
